cmake_minimum_required(VERSION 3.15)
project(cp)

set(CMAKE_CXX_STANDARD 14)

include_directories(Learning_C++)

add_executable(cp
        "Learning_C++/Classes and Objects.cpp"
        Learning_C++/ConstructorAndDestructor.cpp
        Learning_C++/pairwise_swapping_nodes_in_linked_list.cpp
        Learning_C++/person_class.h
        Learning_C++/person_class_definition.h
        Learning_C++/practicing.cpp
        Learning_C++/using_Person_class.cpp
        .cpp
        "0-1 Knapsack Problem.cpp"
        "1 22 333 4444 55555 pyramid.cpp"
        "266A Stones on the table.cpp"
        "A Game of Robots.cpp"
        "A pile of stones.cpp"
        "A Prank.cpp"
        "A Small Array.cpp"
        "A Tale of Two Lands.cpp"
        abhi.cpp
        aca123321.cpp
        Accordion.cpp
        "activity selection.c"
        "Addition and Subtraction.cpp"
        "Addition Errors.cpp"
        "Adjacent Bit Counts.cpp"
        "Age Calculator.cpp"
        Airport.cpp
        "Alarm Clocks Everywhere.cpp"
        "All n bit combinations.cpp"
        "All the Vowels Please.cpp"
        "Almost All Divisors.cpp"
        "Almost Equal.cpp"
        "Alternating Current.cpp"
        "Alyona and copybooks.cpp"
        "Alyona and flowers.cpp"
        "Alyona and mex.cpp"
        "Aman and divisors.cpp"
        "amex garden.cpp"
        "amex riddle.cpp"
        "amex string.cpp"
        "Amusing Joke.cpp"
        "Anastasia and pebbles.cpp"
        "Anna, Svyatoslav and Maps.cpp"
        "Anton And Danik.cpp"
        "Anton and letters.cpp"
        "Apply loves one - new.cpp"
        "Appy and balloons.cpp"
        "Appy and Contest.cpp"
        "Appy loves one.cpp"
        Archer.cpp
        "Area queries.cpp"
        "Array 1.cpp"
        "Array K-Coloring.cpp"
        "array of strings.cpp"
        "Array Stabilization.cpp"
        Array.cpp
        "Arrival of the general.cpp"
        "arrow member selection operator.cpp"
        "ASCII sum.cpp"
        "Average Superhero Gang Power.cpp"
        "Ayoub and Lost Array.cpp"
        "B Tree.c"
        "backslash n string.cpp"
        "Bad Prices.cpp"
        "Bags and Balls.cpp"
        "Balanced Team.cpp"
        "Balanced Ternary String.cpp"
        "Banker's Algorithm.cpp"
        "Bear and Big Brother.cpp"
        "Beautiful Array.cpp"
        "Beautiful garland up.cpp"
        "Beautiful garland.cpp"
        "Beautiful Lyrics.cpp"
        "Beautiful matrix.cpp"
        "Beautiful Partitions.cpp"
        "Beautiful Year.cpp"
        "Berland University.cpp"
        "Best Subsegment.cpp"
        "BewSU Ball.cpp"
        "bfs and dfs.c"
        BFS.c
        "Bicycle Chain.cpp"
        "Big Segment.cpp"
        "Binary Palindromes.cpp"
        "Birthday - vlad cf.cpp"
        Birthday.cpp
        Bisection.cpp
        "Bishu and soldiers.cpp"
        BIt++.cpp
        "Book Reading.cpp"
        "Boolean Parenthesization Problem.cpp"
        Boredom.cpp
        Borze.cpp
        "BowWow and the Timetable.cpp"
        Boxers.cpp
        "Boy or Girl.cpp"
        "Boys and Girls.cpp"
        "Breaking Bad.cpp"
        "Broken Keyboard.cpp"
        Brutality.cpp
        bucket_sort.c
        bucketsort.c
        Buffet.cpp
        "Build a Contest.cpp"
        "Building palindromes.cpp"
        "Business trip.cpp"
        "buying a laptop.cpp"
        "Byte to bit.cpp"
        "Bytelandian Gold Coins.cpp"
        "Caesar cipher decoder.cpp"
        "Caesar cipher encoder.cpp"
        "Calculating function.cpp"
        "Camp or not.cpp"
        "Candies - atcoder.cpp"
        Candies.cpp
        "Capital Movement.cpp"
        "cAPS LOCK.cpp"
        "Catowice City.cpp"
        "chandu and his gf.cpp"
        "Chat room.cpp"
        "Cheap travel.cpp"
        "Cheating on Queue.cpp"
        "Chef and adventures.cpp"
        "Chef and An Ideal Problem.cpp"
        "Chef and circles.cpp"
        "Chef and Digit Jumps.cpp"
        "Chef and Eid.cpp"
        "Chef and happiness 2.cpp"
        "Chef and happiness.cpp"
        "Chef and Interactive Contests.cpp"
        "Chef and operations.cpp"
        "Chef and Periodic Sequence.cpp"
        "Chef and problem setting.cpp"
        "Chef and Proxy.cpp"
        "Chef and restaurant.cpp"
        "Chef and ridges.cpp"
        "Chef and Secret Ingredients .cpp"
        "Chef and serves.cpp"
        "Chef and strange addition.cpp"
        "Chef and typing.cpp"
        "Chef has a lazy team.cpp"
        "Chef, Primes and Trees.cpp"
        "Chefland and Average Distance.cpp"
        "Chips Moving.cpp"
        "Chloe and the sequence.cpp"
        "chocolates - dua.cpp"
        Chocolates.cpp
        "Choose Two Numbers.cpp"
        "Choosing from Buckets.cpp"
        "Choosing teams.cpp"
        "Christmas Spruce.cpp"
        "Circle Metro.cpp"
        "Circle of Students.cpp"
        "Circular Dance.cpp"
        "clash of code.cpp"
        "class template.cpp"
        "classes intro.cpp"
        "codeforces practice.c"
        "codeforces practice.cpp"
        "Codehorses T-shirts.cpp"
        "Coffee and Coursework (Easy version).cpp"
        Coins.cpp
        "Colored Boots.cpp"
        "Colored Path.cpp"
        "Coloring grids.cpp"
        combination.cpp
        "Common Divisors.cpp"
        "Comparing Strings.cpp"
        "Complete the Projects (easy version).cpp"
        composition1.cpp
        Compote.cpp
        "Connect Three.cpp"
        "Connection and Disconnection.cpp"
        "Constanze's Machine.cpp"
        constructors.cpp
        "Contention kickstart.cpp"
        Conversions.cpp
        "copy constructor.cpp"
        "Counting sort.c"
        "Cover it.cpp"
        "Covered Points Count.cpp"
        COW.c
        COW.cpp
        "Creating the contest.cpp"
        "Creative Snap.cpp"
        Cryptopangrams.cpp
        cupboards.cpp
        "Cut ribbon.cpp"
        "Cute Sequences.cpp"
        "Cutting out.cpp"
        CV.cpp
        "Daniel and Spring Cleaning.cpp"
        "deconstructor or destructor.cpp"
        "Definite game.cpp"
        Deque.cpp
        "Design Tutorial Learn from Math.cpp"
        "Destroy the Colony.cpp"
        destructor.cpp
        "Detective Book.cpp"
        DFS-new.cpp
        DFS.c
        DFS.cpp
        "Dice Rolling.cpp"
        "Digital root.cpp"
        "Digits Sequence Dividing.cpp"
        Dijkstra.cpp
        "Dima and a Bad XOR.cpp"
        "Dima and friends.cpp"
        "Discount in a Shop.cpp"
        "Distinct Pairs - new.cpp"
        "Distinct Pairs.cpp"
        "Disturbed people.cpp"
        "Div Times Mod.cpp"
        "Diverse Garland.cpp"
        "Diverse Strings.cpp"
        "Divide it!.cpp"
        "Divisor Subtraction.cpp"
        "Divisors of Two Integers.cpp"
        "Doggo recolouring,cpp.c"
        "Doggo recolouring.cpp"
        "Doors Breaking and Repairing.cpp"
        "Double cola.cpp"
        "Down or Right.cpp"
        Dragons.cpp
        Draupnir.cpp
        Draw!.cpp
        "Drawing Lines.cpp"
        "Dreamoon and wifi.cpp"
        Drinks.cpp
        Dubstep.cpp
        "Dummy Palindromic Strings.cpp"
        "DZY Loves Chessboard.cpp"
        "Easy Chess.cpp"
        "Easy Number Challenge.cpp"
        "Easy problem.cpp"
        "Effective Approach.cpp"
        "Egor and an RPG game.cpp"
        "Ehab and a Special Coloring Problem.cpp"
        "Ehab Fails to Be Thanos.cpp"
        "Ehab Is an Odd Person.cpp"
        Elephant.cpp
        Emotes.cpp
        "Equal Rectangles.cpp"
        "Equalize Them All.cpp"
        "Equalizing by Division (easy version).cpp"
        "Equalizing by Division (hard version) - new.cpp"
        "Equalizing by Division (hard version).cpp"
        "Euclid's gcd.cpp"
        "euclidean_distance_for k-means.cpp"
        "Even digits - hashcode 18.c"
        "Even digits - hashcode 18.cpp"
        "Even odds.cpp"
        "Even Substrings.cpp"
        Event.cpp
        "exception handling.cpp"
        "Expansion coefficient of the array.cpp"
        Expression.cpp
        "Face Produces Unhappiness.cpp"
        factorial.cpp
        "Fancy Quotes.cpp"
        "Farewell party.cpp"
        "FB Hacker Cup 45 points  first pgm.cpp"
        "FB Hacker Cup.cpp"
        Fence.cpp
        Fencing.cpp
        FIFO.cpp
        "Fight with Monsters.cpp"
        figureful.cpp
        "file handling.cpp"
        "Filling Shapes.cpp"
        "Find Divisible.cpp"
        "Find square.cpp"
        "Find sum L2.cpp"
        "Finding teammate shaurya.cpp"
        "Finding teammate.cpp"
        "Flipping Game.cpp"
        "Flood Fill.cpp"
        Football.cpp
        "Foregone solution - codejam.cpp"
        "Form Biggest Number L2 .cpp"
        "Fox and Box Accumulation.cpp"
        "Fox and snake.cpp"
        "friend function.cpp"
        "friend function2.cpp"
        "Friend or Girlfriend.cpp"
        "Frog 1.cpp"
        "Frog 2.cpp"
        "Frog jumping.c"
        "Frog jumping.cpp"
        "Game 23.cpp"
        "Game of robots.cpp"
        "Game with modulo.cpp"
        "Game with sticks.cpp"
        "Game with string.cpp"
        "Game with Telephone Numbers.cpp"
        Games.cpp
        "Gas Pipeline.cpp"
        "Gennady and a card game.cpp"
        "Geometric Progression Triplet.cpp"
        "George and accomodation.cpp"
        "Good array.cpp"
        "Good median.cpp"
        "Good ol' Numbers Coloring.cpp"
        "Good String 560 div 3.cpp"
        "Good string.cpp"
        "Google q1.cpp"
        "Google q2.cpp"
        "Got Any Grapes.cpp"
        "Gourmet Cat.cpp"
        "Graph Without Long Directed Paths.cpp"
        Graphs.c
        "Gravity flip.cpp"
        "Grid 1.cpp"
        "Grid game - new.cpp"
        "Grid game.cpp"
        "Grow The Tree.cpp"
        "Guddu on a Date.cpp"
        "Hard Sequence.cpp"
        "Hate A.cpp"
        "Have you met Ted.cpp"
        "Hay Points.cpp"
        Heapsort.c
        "Hello World.cpp"
        "Help lost robot.cpp"
        "Helping Hiasat.cpp"
        "Hexadecimal's Numbers.cpp"
        "Hexadecimal's theorem.cpp"
        "High School L2.cpp"
        "Hit the Lottery.cpp"
        "HLTV ratings.cpp"
        "Holi on Graph.cpp"
        HQ9+.cpp
        "Huffman coding.c"
        "Huffman coding.cpp"
        Hulk.cpp
        "Hungry Sequence.cpp"
        "I wanna be the guy.cpp"
        I_love_aca123321.cpp
        "Ilya and a Colorful Walk.cpp"
        "Ilya and Queries.cpp"
        "In Search of an Easy Problem.cpp"
        "Increase and Decrease.cpp"
        "Increasing by Modulo.cpp"
        "Increasing Subsequence (easy version).cpp"
        "inheritance 1.cpp"
        inheritance.cpp
        "Inscribed Figures.cpp"
        Insertionsort.c
        "Insomnia cure.cpp"
        "Integer Overflow.cpp"
        "Integer Points.cpp"
        "Integer Sequence Dividing.cpp"
        "Interesting Drink.cpp"
        "IQ Test.cpp"
        "is it a tree - new.cpp"
        "Is it a tree .cpp"
        "Is your horseshoe on the other hoof.cpp"
        "Jeff and Digits.cpp"
        "Jeff and Periods.cpp"
        "journey to the moon.cpp"
        Journey.cpp
        "Jzzhu and Children.cpp"
        k-string.cpp
        "Kefa and first steps.cpp"
        "Kefa and Park .cpp"
        "Key races.cpp"
        "Kirk and a Binary String (easy version).cpp"
        "Kitahara Haruki's Gift.cpp"
        "Knapsack 1.cpp"
        "Knapsack 2.cpp"
        "Knight Chess.cpp"
        "Knockout Jump.cpp"
        Kruskal.c
        "large numbers.cpp"
        "Largest region in matrix.cpp"
        Lazyland.cpp
        "LCM and HCF.cpp"
        "lcs atcoder.cpp"
        LCS.cpp
        Letter.cpp
        "Letters Rearranging.cpp"
        "Light It Up-new.cpp"
        "Light It Up.cpp"
        "Lights Out.cpp"
        "Little Elephant and Bits.cpp"
        "Little Elephant and Function.cpp"
        "little elephant and problem.cpp"
        "Little elephant and rozdil.cpp"
        "Little Girl and Game.cpp"
        "Lonely Vijju.cpp"
        "Long Number.cpp"
        "Longest Common Subsequence LCS.cpp"
        "longest increasing SUBSEQUENCE.cpp"
        "Longest path in a tree.cpp"
        "Longest Path.cpp"
        "Lose it!.cpp"
        "Lost Numbers.cpp"
        "Love A.cpp"
        "LRU 2.c"
        "LRU 2.cpp"
        "LRU 3.cpp"
        LRU.cpp
        "Lucky division.cpp"
        "Lucky Number Game - new.cpp"
        "Lucky Number Game.cpp"
        "Lucky Numbers.cpp"
        "Magic Numbers.cpp"
        "Magic Numebrs.cpp"
        "Magic Powder - 1.cpp"
        "Magic Ship.cpp"
        "magical binary strings.cpp"
        "Magician and chef.cpp"
        Magnets.cpp
        "Make it equal.cpp"
        "Make Product Equal One.cpp"
        "Make Them Equal.cpp"
        "Manhattan crepe cart.cpp"
        "Many Equal Substrings.cpp"
        "Many Slimes.cpp"
        "Map Queries.cpp"
        "Margarite and the best present.cpp"
        "Masha and two friends.cpp"
        "Match Points.cpp"
        Math.cpp
        mathophobia.cpp
        "Max and Electrical Panel.cpp"
        "Max Candies.cpp"
        "Max power.cpp"
        "Maxim and Biology.cpp"
        "Maximal Continuous Rest.cpp"
        "Maximal Intersection.cpp"
        "Maximal Value.cpp"
        "Maximise product.cpp"
        "Maximum Remaining.cpp"
        MCM.cpp
        "member initialisers.cpp"
        "Meme problem.cpp"
        "Merge it!.cpp"
        Mergesort.c
        Metro.cpp
        "Middle of the Contest.cpp"
        "Mike and palindrome.cpp"
        "Minimizing the String.cpp"
        "Minimum Integer - karankap.cpp"
        "Minimum Integer - konark.cpp"
        "Minimum Integer.cpp"
        "Minimum number of jumps.cpp"
        "Minimum Sum Partition.cpp"
        "Minimum Triangulation.cpp"
        "Minimum Value Rectangle.cpp"
        "Minion chef and bananas Shaurya.cpp"
        "Minion chef and bananas.cpp"
        "Mishka and the Last Exam.c"
        "Mishka and the Last Exam.cpp"
        "Mislove Has Lost an Array.cpp"
        mod.cpp
        "Moore's law.cpp"
        "Movie Ticket Reservation.cpp"
        "Moving Segments-new.cpp"
        "Moving Segments.cpp"
        "Mr Kitayuta the Treasure Hunter.cpp"
        "Mr Robot beats time.cpp"
        "Naman and sum.cpp"
        "Name problem.cpp"
        "Nastya Is Buying Lunch.cpp"
        "Nastya Is Playing Computer Games.cpp"
        "Nastya Is Reading a Book.cpp"
        "Nastya Is Transposing Matrices.cpp"
        "Nearly lucky number.cpp"
        "Neighbours and New Year Party - codegladiators.cpp"
        "Neko finds grapes.cpp"
        "Neko Performs Cat Furrier Transform.cpp"
        "New building for SIS.cpp"
        "new PE 3.c"
        "New Year and the Christmas Ornament.cpp"
        "New Year and the Sphere Transmission.cpp"
        "New Year and the Treasure Geolocation.cpp"
        "New year candles.cpp"
        "New Year Transportation.cpp"
        "News Distribution.cpp"
        "next round.cpp"
        "Nice Garland.cpp"
        "NiKo and chocolates 2.cpp"
        "Nilakshi the Rockstar codechef.cpp"
        Nirvana.cpp
        "NN and the Optical Illusion.cpp"
        "no pairs allowed.cpp"
        nonstdinput.cpp
        "Number of Coins.cpp"
        "Numbers on the Chessboard.cpp"
        "Obscura - letter frequency of pangram.cpp"
        "obscura6 - new.cpp"
        obscura6.cpp
        "Odd Sum Segments.cpp"
        "Olofmeister and Bit Query.cpp"
        "oop practice.cpp"
        "operator overloading 2 (second method).cpp"
        "operator overloading 2.cpp"
        "operator overloading 3.cpp"
        "Operator overloading.cpp"
        "Optimal Replacement.cpp"
        "Optimal Strategy For A Game.cpp"
        "order of execution of constructors and destructors when inherited.cpp"
        "Paint the wall.cpp"
        "Pair of numbers.cpp"
        "Pair of toys.cpp"
        Pairs.cpp
        "Palindromic Matrix.cpp"
        "Palindromic Paths.cpp"
        "Palindromic Twist.cpp"
        Pangram.cpp
        "Panoramix's Prediction.cpp"
        Parallelepiped.cpp
        "Parcels kickstart.cpp"
        "Parity Alternated Deletions.cpp"
        Parity.cpp
        Party.cpp
        "Pashmak and Flowers.cpp"
        "passing values to constructor of base class from derived class.cpp"
        Password.cpp
        "Pen Pineapple Apple Pen.cpp"
        "Perfect Permutation.cpp"
        "Petr and a Combination Lock.cpp"
        "Petr and Book.cpp"
        "Petya and origami.cpp"
        "Petya and strings.c"
        "Petya and strings.cpp"
        "Philosophers stone.cpp"
        "Pigeon d'Or.cpp"
        "Play carrom.cpp"
        Playlist.cpp
        "Plus from Picture.cpp"
        "Polandball and forest.cpp"
        "Police Patrol.cpp"
        "Polycarp Restores Permutation.cpp"
        "Polycarp Training.cpp"
        "Polycarp's New Job.cpp"
        "Polygon for the Angle.cpp"
        "polymorphism and virtual function.cpp"
        power.cpp
        "Powerful division.cpp"
        "Powers Of Two.cpp"
        "prac stl.cpp"
        prac.c
        prac.cpp
        praccc.cpp
        pracnew.c
        "practice 1.cpp"
        "practice 2.cpp"
        "practice 3.cpp"
        "Precious stones codechef.cpp"
        "Prefix Sum Primes.cpp"
        "Prefixes and Suffixes.cpp"
        "Preparation for International Women's Day.cpp"
        "Present from Lena.cpp"
        Presents.cpp
        "Prim's algorithm up.c"
        "Prim's Algorithm.c"
        "Prime Path .cpp"
        "Print Pattern.cpp"
        "Problem for Nazar.cpp"
        "Protected access specifier.cpp"
        "pth factor.cpp"
        Puzzles.cpp
        "Pythagorean Theorem II.cpp"
        "Qualifying to Pre-elimination.cpp"
        Queen.cpp
        "queue at the school.cpp"
        "Queue in the Train.cpp"
        Quicksort.c
        "Radix sort.cpp"
        RAG.cpp
        "Rail Fence cipher decoder.cpp"
        "Rail Fence cipher encoder.cpp"
        "Range update L2.cpp"
        "range update.cpp"
        Ratio.cpp
        "Reachable Numbers.cpp"
        "Reconnaissance 2.cpp"
        "Recover it.cpp"
        "Recursion_practice.cpp"
        "Reduce to One.cpp"
        "reduction game.cpp"
        Remainder.cpp
        "Repeating Cipher.cpp"
        "Restoring Three Numbers.cpp"
        "Restricted RPS.cpp"
        "Reverse a Substring.cpp"
        "Right-Left Cipher.cpp"
        "Robot Programming Strategy.cpp"
        "Rod cutting problem.c"
        "Roger and tree.cpp"
        "Roman and Browser.cpp"
        Sail.cpp
        Salary.cpp
        Sale.cpp
        "Salem and sticks.cpp"
        "Sea Battle.cpp"
        "Second largest element.cpp"
        "second method String to int and vice-versa .cpp"
        "Select Training Set.cpp"
        "Set Queries.cpp"
        "Shake Shake Shaky.cpp"
        "Shichikuji and Power Grid.cpp"
        "Shooshuns and Sequence.cpp"
        "Shortest Common Supersequence.cpp"
        "Shower Line.cpp"
        "Shrinking Space.cpp"
        "Shuffle Hashing.cpp"
        "Silent Classroom.cpp"
        "sin x.cpp"
        "Single Wildcard Pattern Matching.cpp"
        Slimes.cpp
        "soft drinking.cpp"
        "Soldier and bananas.cpp"
        "Sonic and Circles.cpp"
        "Sonic And K - Separated Elements.cpp"
        "Sonya wants more equal numbers.cpp"
        "Sort a structure L2.c"
        "Sort a structure L2.cpp"
        "sort the urls.cpp"
        "sorting with structures.cpp"
        "spanning tree with maximum degree.cpp"
        "Special Sort.cpp"
        "Splitting into digits.cpp"
        "Spread the word.cpp"
        "Square Area.cpp"
        "Square Cube.cpp"
        "Square Filling.cpp"
        "square sum.cpp"
        SRTF-new.c
        Stages.cpp
        Staircases.cpp
        "Stas and the Queue at the Buffet.cpp"
        "Stewie and screen size.cpp"
        "STL map.cpp"
        "Stock Arbitraging.cpp"
        Stones.cpp
        "String Coloring (easy version).cpp"
        "String Compression.cpp"
        "String Paths.cpp"
        "string task.c"
        "String to int and vice-versa.cpp"
        "Stud max buoy.cpp"
        "Subset Sum Problem.cpp"
        "Substring Removal.cpp"
        "sudoku solver.cpp"
        "Sum of Digits hackerearth.cpp"
        "Sum of digits.cpp"
        sum_of_elements_from_index_l_to_r.cpp
        "Summation over nCr.cpp"
        "sums in a triangle.cpp"
        "Supercentral Point.cpp"
        "Superhero Transformation.cpp"
        "Swag Subsets.cpp"
        "swapping using reference.cpp"
        "System of Equations.cpp"
        "Tanya and Candies.cpp"
        Tape.cpp
        Taxi.cpp
        Team.cpp
        "Teams forming.cpp"
        "Technogoblet of Fire.cpp"
        "Telephone number.cpp"
        "TEX Quotes.cpp"
        "Thanos sort.cpp"
        "The Doors.cpp"
        "The minimal unique substring.cpp"
        "The New Year Meeting Friends.cpp"
        "The number of positions.cpp"
        "The party and sweets.cpp"
        "The Pleasant Walk.c"
        "The Pleasant Walk.cpp"
        "The proposal.cpp"
        "The Retaliation of Reality.cpp"
        "The World Is Just a Programming Task (Easy Version).cpp"
        "Theatre square.cpp"
        "this keyword.cpp"
        "Three Religions.cpp"
        "Tiling Challenge.cpp"
        "Time trickles slowly but surely.cpp"
        TL.cpp
        "Tower of Hanoi.cpp"
        "Trailing Loves.cpp"
        "Training kisckstart.cpp"
        Tram.cpp
        Translation.cpp
        "Tree _order.cpp"
        "Truth and Dare.cpp"
        Twins.cpp
        "Two Bags of Potatoes.cpp"
        "Two Buttons.cpp"
        "Two distinct points.cpp"
        "Two Shuffled Sequences.cpp"
        "Two Teams.cpp"
        "Ugly Pairs.cpp"
        "Ultra-Fast Mathematician.cpp"
        "Uniform String.cpp"
        unique-abhimanyu.cpp
        "Unlucky Ticket.cpp"
        Untitled1.c
        "upper bound.cpp"
        Vacation.cpp
        "Valid BFS.cpp"
        "Valid Triangles.cpp"
        "Vanya and fence.cpp"
        "Vanya and Lanterns.cpp"
        "Vasya and Binary String.cpp"
        "Vasya and chocolates.cpp"
        "Vasya and isolated vertices.cpp"
        "Vasya and socks.cpp"
        "vector or array of user given size using new operator.cpp"
        "Views matter up up.cpp"
        "Views matter up.cpp"
        "Views matter.cpp"
        "Vitya in the Countryside.cpp"
        vowels.cpp
        "Waiting in queue shaurya.cpp"
        "Waiting in queue.cpp"
        "Walking Robot.cpp"
        "Warangal restaurants.cpp"
        "Water Buying.cpp"
        "Weakened Common Divisor.cpp"
        "Weapon Value.cpp"
        "Weird coins.c"
        "Weird Coins.cpp"
        "WIN or LOSE - codegladiators.cpp"
        Winner.cpp
        "Without Whitespaces.cpp"
        "Word capitalisation.cpp"
        Word.cpp
        "Wrong answer - finding teammates.cpp"
        "Xenia and Divisors.cpp"
        "Xenia and ringroad.cpp"
        "XOR! Wait for it .cpp"
        "Yalalovichik Numbers.cpp"
        "Yaroslav and Permutations.cpp"
        "Yet Another Array Partitioning Task.cpp"
        "Yet Another Walking Robot.cpp"
        "You can go your own way.cpp"
        "Young physicist.cpp"
        "Yuhao and a parenthesis.cpp"
        "Zero Quantity Maximization.cpp"
        "Zuhair and Strings.cpp")
add_executable(Recursion_practice Recursion_practice.cpp)
add_executable(CMakeLists CMakeLists.txt)